--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </section>
         <section class="purpose section">
             <div class="container">
-                <h2 class="title">Title 1</h2>
+                <h2 class="title">Recent Projects</h2>
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="pwj-card">
