Resizing of technology section. Cleaning up HTML.

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 
   </head>
 
-<!-- Body of Page -->
+<!-- Body of Page & Menu -->
 <body>
     <div id="menu-item" class="menu-item hide-menu">
         <div class="container">
             <ul>
                 <a href="index.html"><li>Home</li></a>
                 <a href="#about"><li>Who I Am</li></a>
-                <a href="#examples"><li>Examples</li></a>
+                <a href="#examples"><li>Recent Projects</li></a>
                 <a href="#technology"><li>Skills and Technology</li></a>
                 <a href="#articles"><li>Articles</li></a>
                 <a href="#hire"><li>Hire Me</li></a>
@@ -42,6 +42,8 @@
             </ul>
         </div>
     </div>
+
+<!-- Header Section -->
     <div class="main">
         <header class="bg-img header">
             <nav class="navbar navbar-default navbar-pwj">
@@ -74,6 +76,9 @@
                 </div>
             </div>
         </header>
+
+<!-- About Me Section -->
+
         <section id="about" class="about section">
             <div class="container">
                 <div class="row">
@@ -86,21 +91,22 @@
                 </div>
             </div>
         </section>
-        <section class="purpose section">
+
+<!-- Recent Projects Section -->
+
+        <section id="projects" class="projects section">
             <div class="container">
                 <h2 class="title">Recent Projects</h2>
                 <div class="row">
                     <div class="col-sm-4">
                         <div class="pwj-card">
                             <div class="pwj-card-header">
-                                <div class="card-icon">
-                                    <span class="graphic-design" aria-hidden="true"></span>
-                                </div>
+                                <a href="expressions-learning-center/index.html"><img class="img-responsive" src="images/expressionsmain.png"></a>
                             </div>
                             <div class="pwj-card-content">
-                                <h3>Title 2</h3>
+                                <h3>Expressions Learning Center</h3>
                                 <p>
-                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                  Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
                                 </p>
                             </div>
                         </div>
@@ -108,14 +114,12 @@
                     <div class="col-sm-4">
                         <div class="pwj-card">
                             <div class="pwj-card-header">
-                                <div class="card-icon">
-                                    <span class="webdevelopment" aria-hidden="true"></span>
-                                </div>
+                                <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/uccimain.png"></a>
                             </div>
                             <div class="pwj-card-content">
-                                <h3>Title 3</h3>
+                                <h3>UCCI Home Inspections</h3>
                                 <p>
-                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                    Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
                                 </p>
                             </div>
                         </div>
@@ -123,21 +127,28 @@
                     <div class="col-sm-4">
                         <div class="pwj-card">
                             <div class="pwj-card-header">
-                                <div class="card-icon">
-                                    <span class="printing" aria-hidden="true"></span>
-                                </div>
+                                <a href="#"><img class="img-responsive" src="assets/images/10.jpg"></a>
                             </div>
                             <div class="pwj-card-content">
-                                <h3>Title</h3>
+                                <h3>Altimeter Clothing</h3>
                                 <p>
-                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                  Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
                                 </p>
+                                <div class="social-icons">
+                                    <ul>
+                                        <a href="#"><li><span class="ion-social-facebook"></span></li></a>
+                                        <a href="#"><li><span class="ion-social-twitter"></span></li></a>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
+<!-- Professional Design Section -->
+
         <section id="expertise" class="expert">
             <div class="container-fluid">
                 <div class="row">
@@ -162,6 +173,9 @@
                 </div>
             </div>
         </section>
+
+<!-- Quote Section -->
+
         <section class="pwj-quote section bg-img">
             <div class="container">
                 <div class="row">
@@ -175,6 +189,9 @@
                 </div>
             </div>
         </section>
+
+<!-- Skills and Technology Section -->
+
         <section id="technology" class="work section">
             <div class="container">
                 <h2 class="title">Skills and Technology</h2>
@@ -182,7 +199,7 @@
                     <div class="item">
                         <div class="pwj-card">
                             <div class="pwj-card-header">
-                                <img class="img-responsive" src="./images/html5.png">
+                                <img class="img-responsive" src="./images/htmllogo.png">
                             </div>
                             <div class="pwj-card-content">
                                 <h3>HTML5</h3>
@@ -195,7 +212,7 @@
                     <div class="item">
                         <div class="pwj-card">
                             <div class="pwj-card-header">
-                                <img class="img-responsive" src="./images/css3.png">
+                                <img class="img-responsive" src="./images/csslogo.png">
                             </div>
                             <div class="pwj-card-content">
                                 <h3>CSS3</h3>
@@ -208,7 +225,7 @@
                     <div class="item">
                         <div class="pwj-card">
                             <div class="pwj-card-header">
-                                <img class="img-responsive" src="./images/js.jpeg">
+                                <img class="img-responsive" src="./images/jslogo.png">
                             </div>
                             <div class="pwj-card-content">
                                 <h3>JavaScript</h3>
@@ -221,7 +238,7 @@
                     <div class="item">
                         <div class="pwj-card">
                             <div class="pwj-card-header">
-                                <img class="img-responsive" src="./images/python.jpeg">
+                                <img class="img-responsive" src="./images/pythonlogo.png">
                             </div>
                             <div class="pwj-card-content">
                                 <h3>Python/Django</h3>
@@ -234,7 +251,7 @@
                     <div class="item">
                         <div class="pwj-card">
                             <div class="pwj-card-header">
-                                <img class="img-responsive" src="./images/react.png">
+                                <img class="img-responsive" src="./images/angularreact.png">
                             </div>
                             <div class="pwj-card-content">
                                 <h3>React</h3>
@@ -247,7 +264,7 @@
                     <div class="item">
                         <div class="pwj-card">
                             <div class="pwj-card-header">
-                                <img class="img-responsive" src="./images/languages.jpeg">
+                                <img class="img-responsive" src="./images/languageslogo.jpg">
                             </div>
                             <div class="pwj-card-content">
                                 <h3>Your Technology</h3>
@@ -260,6 +277,9 @@
                 </div>
             </div>
         </section>
+
+<!-- Showreel Section -->
+
         <section class="watch bg-img">
             <div class="container">
                 <div class="row">
@@ -271,6 +291,9 @@
                 </div>
             </div>
         </section>
+
+<!-- Articles Section -->
+
         <section id="articles" class="team section">
             <div class="container">
                 <h2 class="title">Articles</h2>
@@ -337,6 +360,9 @@
                 </div>
             </div>
         </section>
+
+<!-- Email Contact Section -->
+
         <section class="subscribe section bg-img">
             <div class="container">
                 <div class="row">
@@ -352,6 +378,9 @@
                 </div>
             </div>
         </section>
+
+<!-- Hire Me Section -->
+
         <section id="hire" class="contact section">
             <div class="container">
                 <h2 class="title">Hire Me</h2>
@@ -419,6 +448,8 @@
             </div>
         </footer>
     </div>
+
+<!-- Javascript Injections -->
 
     <script src="./js/jquery-3.1.1.js"></script>
     <script src="./js/bootstrap.min.js"></script>
