Signup html page and placeholder images added

--- a/signup.html
+++ b/signup.html
@@ -54,7 +54,7 @@
                 </div>
             </nav>
 
-
+<!-- Element 1 -->
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
@@ -80,72 +80,57 @@
                             <p>
                                 Successful people do what unsuccessful people are not willing to do. Don't wish it were easier; wish you were better.
                             </p>
-                        </div>
-                        <div class="pwj-card-section mt80">
-                            <h2>Workstations</h2>
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <div class="pwj-card">
-                                        <div class="pwj-card-header">
-                                            <img class="img-responsive" src="assets/images/4.jpg">
-                                        </div>
-                                        <div class="pwj-card-content">
-                                            <h3>Creative Business Cup</h3>
-                                            <p>
-                                                Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class="pwj-card">
-                                        <div class="pwj-card-header">
-                                            <img class="img-responsive" src="assets/images/5.jpg">
-                                        </div>
-                                        <div class="pwj-card-content">
-                                            <h3>Creative Cover Design</h3>
-                                            <p>
-                                                Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-sm-4">
-                                    <div class="pwj-card">
-                                        <div class="pwj-card-header">
-                                            <img class="img-responsive" src="assets/images/6.jpg">
-                                        </div>
-                                        <div class="pwj-card-content">
-                                            <h3>Creative Namecard</h3>
-                                            <p>
-                                                Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+
 
 
             <div class="container">
-                <h2 class="mt80">Form</h2>
+                <h2 class="mt80">Enrollment Form</h2>
                 <form class="mb80">
                     <div class="row">
                         <div class="col-sm-6">
-                            <input type="text" class="form-control" placeholder="Name">
+                          <select class="form-control">
+                              <option value="" disabled selected>Sex</option>
+                              <option>Boy</option>
+                              <option>Girl</option>
+                          </select>
                         </div>
+
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control" placeholder="Child's Name">
+                        </div>
+
+                        <div class="col-sm-6">
+                            <input type="email" class="form-control" placeholder="1st Parent's Name">
+                        </div>
+
+                        <div class="col-sm-6">
+                            <input type="date" class="form-control" placeholder="Enrollment Date">
+                        </div>
+
                         <div class="col-sm-6">
                             <input type="email" class="form-control" placeholder="Email">
                         </div>
-                        <div class="col-sm-12">
+
+                        <div class="col-sm-6">
+                            <input type="email" class="form-control" placeholder="Email">
+                        </div>
+
+                          <div class="col-sm-6">
+                            <input type="email" class="form-control" placeholder="Email">
+                        </div>
+
+
+
+                        <!-- <div class="col-sm-12">
                             <select class="form-control">
                                 <option>1</option>
                                 <option>2</option>
                                 <option>3</option>
                                 <option>4</option>
                                 <option>5</option>
-                            </select>
+                            </select> -->
                             <!-- <input type="text" class="form-control" placeholder="-Select a catagory"> -->
-                        </div>
+                        <!-- </div> -->
                         <div class="col-sm-12">
                             <textarea class="form-control" rows="8" placeholder="Message"></textarea>
                         </div>
