--- a/index.html
+++ b/index.html
@@ -127,19 +127,13 @@
                     <div class="col-sm-4">
                         <div class="pwj-card">
                             <div class="pwj-card-header">
-                                <a href="#"><img class="img-responsive" src="assets/images/10.jpg"></a>
+                                <a href="#"><img class="img-responsive" src="images/skylane.jpg"></a>
                             </div>
                             <div class="pwj-card-content">
                                 <h3>Altimeter Clothing</h3>
                                 <p>
                                   Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
                                 </p>
-                                <div class="social-icons">
-                                    <ul>
-                                        <a href="#"><li><span class="ion-social-facebook"></span></li></a>
-                                        <a href="#"><li><span class="ion-social-twitter"></span></li></a>
-                                    </ul>
-                                </div>
                             </div>
                         </div>
                     </div>
