Altimeter clothing image added

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="col-sm-4">
                         <div class="pwj-card">
                             <div class="pwj-card-header">
-                                <a href="#"><img class="img-responsive" src="images/skylane.jpg"></a>
+                                <a href="#"><img class="img-responsive" src="images/altimeterclothing.png"></a>
                             </div>
                             <div class="pwj-card-content">
                                 <h3>Altimeter Clothing</h3>
