--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo-icon.png"/>
+    <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 
     <!-- Bootstrap -->
@@ -33,12 +33,12 @@
         <div class="container">
             <ul>
                 <a href="index.html"><li>Home</li></a>
-                <a href="#about"><li>Who I Am</li></a>
-                <a href="#examples"><li>Recent Projects</li></a>
+                <a href="#about"><li>About Me</li></a>
+                <a href="#projects"><li>Recent Projects</li></a>
                 <a href="#technology"><li>Skills and Technology</li></a>
                 <a href="#articles"><li>Articles</li></a>
                 <a href="#hire"><li>Hire Me</li></a>
-                <a href="elements.html"><li>Elements</li></a>
+                <a href="resume.html"><li>Resume</li></a>
             </ul>
         </div>
     </div>
@@ -127,7 +127,7 @@
                     <div class="col-sm-4">
                         <div class="pwj-card">
                             <div class="pwj-card-header">
-                                <a href="#"><img class="img-responsive" src="images/altimeterclothing.png"></a>
+                                <a href="https://www.altimeterclothing.com"><img class="img-responsive" src="images/altimeterclothing.png"></a>
                             </div>
                             <div class="pwj-card-content">
                                 <h3>Altimeter Clothing</h3>
