Layout of resume components

--- a/resume.html
+++ b/resume.html
@@ -63,9 +63,53 @@
                     <div class="col-sm-12">
                         <div class="headings">
                             <h2 align="center">Programming Education</h2>
-                            <p>
-                                Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
-                            </p>
+                            <section id="projects" class="projects section">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            <div class="pwj-card">
+                                                <div class="pwj-card-header">
+                                                    <a href="expressions-learning-center/index.html"><img class="img-responsive" src="images/devmountain.png"></a>
+                                                </div>
+                                                <div class="pwj-card-content">
+                                                    <h3>DevMountain Full Stack Program</h3>
+                                                    <p>
+                                                      Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <div class="pwj-card">
+                                                <div class="pwj-card-header">
+                                                    <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/uccimain.png"></a>
+                                                </div>
+                                                <div class="pwj-card-content">
+                                                    <h3>Pluralsight</h3>
+                                                    <p>
+                                                        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4">
+                                            <div class="pwj-card">
+                                                <div class="pwj-card-header">
+                                                    <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/uccimain.png"></a>
+                                                </div>
+                                                <div class="pwj-card-content">
+                                                    <h3>Udemy</h3>
+                                                    <p>
+                                                        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+
+
+
                             <h2 align="center">Formal Education</h2>
                             <p>
                                 Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
