Resume updates with programming skills, etc.

--- a/resume.html
+++ b/resume.html
@@ -18,106 +18,143 @@
     </head>
 
 <!-- Header and Menu -->
-    <body>
-        <div id="menu-item" class="menu-item hide-menu">
-            <div class="container">
-                <ul>
-                    <a href="index.html"><li>Home</li></a>
-                    <a href="index.html#about"><li>About Me</li></a>
-                    <a href="index.html#projects"><li>Recent Projects</li></a>
-                    <a href="index.html#technology"><li>Skills and Technology</li></a>
-                    <a href="index.html#articles"><li>Articles</li></a>
-                    <a href="index.html#hire"><li>Contact Info</li></a>
-                    <a href="https://github.com/ontheplains"><li>Github</li></a>
-                </ul>
-            </div>
+<body>
+    <div id="menu-item" class="menu-item hide-menu">
+        <div class="container">
+            <ul>
+                <a href="index.html"><li>Home</li></a>
+                <a href="index.html#about"><li>About Me</li></a>
+                <a href="index.html#projects"><li>Recent Projects</li></a>
+                <a href="index.html#technology"><li>Skills and Technology</li></a>
+                <a href="index.html#articles"><li>Articles</li></a>
+                <a href="index.html#hire"><li>Contact Info</li></a>
+                <a href="https://github.com/ontheplains"><li>Github</li></a>
+            </ul>
         </div>
+    </div>
 
 
-        <div class="main element">
-            <nav class="navbar navbar-default navbar-pwj">
-                <div class="container">
-                    <div class="navigation-bar">
-                        <div class="row">
-                            <div class="col-xs-6">
-                                <div class="logo">
-                                     <a href="index.html"><span class="pwj-icon"></span></a>
-                                </div>
-                            </div>
-                            <div class="col-xs-6 text-right">
-                                <div class="menu m">
-                                    <a href="#"><span class="ion-navicon _ion-android-menu"></span></a>
-                                </div>
-                            </div>
+<div class="main element">
+    <nav class="navbar navbar-default navbar-pwj">
+        <div class="container">
+            <div class="navigation-bar">
+                <div class="row">
+                    <div class="col-xs-6">
+                        <div class="logo">
+                             <a href="index.html"><span class="pwj-icon"></span></a>
+                        </div>
+                    </div>
+                    <div class="col-xs-6 text-right">
+                        <div class="menu m">
+                            <a href="#"><span class="ion-navicon _ion-android-menu"></span></a>
                         </div>
                     </div>
                 </div>
-            </nav>
+            </div>
+        </div>
+    </nav>
 
+<!-- Resume Section -->
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <h1  class="title mt80" align="center">Resume</h1>
+        </div>
 
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <h1  class="title mt80" align="center">Resume</h1>
-                    </div>
-                    <div class="col-sm-12">
-                        <div class="headings">
-                            <h2 align="center">Programming Education</h2>
-                            <section id="projects" class="projects section">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-sm-4">
-                                            <div class="pwj-card">
-                                                <div class="pwj-card-header">
-                                                    <a href="expressions-learning-center/index.html"><img class="img-responsive" src="images/devmountain.png"></a>
-                                                </div>
-                                                <div class="pwj-card-content">
-                                                    <h3>DevMountain Full Stack Program</h3>
-                                                    <p>
-                                                      Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <div class="pwj-card">
-                                                <div class="pwj-card-header">
-                                                    <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/uccimain.png"></a>
-                                                </div>
-                                                <div class="pwj-card-content">
-                                                    <h3>Pluralsight</h3>
-                                                    <p>
-                                                        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <div class="pwj-card">
-                                                <div class="pwj-card-header">
-                                                    <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/uccimain.png"></a>
-                                                </div>
-                                                <div class="pwj-card-content">
-                                                    <h3>Udemy</h3>
-                                                    <p>
-                                                        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
+<!-- Programming Education Section -->
+        <div class="col-sm-12">
+            <div class="headings">
+                <h2 align="center">Programming Education</h2>
+                <section id="projects" class="projects section">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <div class="pwj-card">
+                                    <div class="pwj-card-header">
+                                        <a href="expressions-learning-center/index.html"><img class="img-responsive" src="images/devmountain.png"></a>
+                                    </div>
+                                    <div class="pwj-card-content">
+                                        <h3>DevMountain Full Stack</h3>
+                                        <p>
+                                          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
 
+        <div class="col-sm-4">
+            <div class="pwj-card">
+                <div class="pwj-card-header">
+                    <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/pluralsight.png"></a>
+                </div>
+                <div class="pwj-card-content">
+                    <h3>Pluralsight</h3>
+                    <p>
+                        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="pwj-card">
+                <div class="pwj-card-header">
+                    <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/udemy.png"></a>
+                </div>
+                <div class="pwj-card-content">
+                    <h3>Udemy</h3>
+                    <p>
+                        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                    </p>
+                </div>
+            </div>
+        </div>
 
-
-
-
-                            <h2 align="center">Formal Education</h2>
-                            <p>
-                                Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
-                            </p>
-                            <h2 align="center">Work Experience</h2>
-                            <p>
-                                Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
-                            </p>
+<!-- Formal Education Section -->
+        <div class="col-sm-12">
+            <div class="headings">
+                <h2 align="center">Formal Education</h2>
+                <section id="projects" class="projects section">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <div class="pwj-card">
+                                    <div class="pwj-card-header">
+                                        <a href="expressions-learning-center/index.html"><img class="img-responsive" src="images/devmountain.png"></a>
+                                    </div>
+                                    <div class="pwj-card-content">
+                                        <h3>Liberty University</h3>
+                                        <p>
+                                          Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="pwj-card">
+                                    <div class="pwj-card-header">
+                                        <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/pluralsight.png"></a>
+                                    </div>
+                                    <div class="pwj-card-content">
+                                        <h3>Liberty University</h3>
+                                        <p>
+                                            Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="pwj-card">
+                                    <div class="pwj-card-header">
+                                        <a href="ucci-landing-page/index.html"><img class="img-responsive" src="images/udemy.png"></a>
+                                    </div>
+                                    <div class="pwj-card-content">
+                                        <h3>Stockdale High School</h3>
+                                        <p>
+                                            Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consetetur,adipisivelit, sed quia non numquam eius modi tempora incidun.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="blockquote mt80">
                             <h2>Statement of Passion</h2>
@@ -126,9 +163,7 @@
                             </p>
                         </div>
 
-
-
-
+<!-- Footer Section -->
             <footer class="footer">
                 <div class="container">
                     <div class="row">
